@@ -1,6 +1,8 @@
 tar cvfz <desired name> <file name>
 giz -9 <tar>
 
+git log --pretty="%cD - %s%n" --reverse
+
 to delete:
 	rm -rf <file>
 
