@@ -1,0 +1,4 @@
+terrain: terrain.c
+	gcc terrain.c -o terrain
+clean:
+	rm -f terrain *~ core
