@@ -1,3 +1,7 @@
 date and time: What you've done
 
+1/19/2024:
+	Started and finished tour.c
+1/23/2024:
+	learnt how to create makefile and learned of the turn in requirments. As well as made a git repo for all of this so future change logs will be from git.
 
